recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:18: error: ':' expected but ')' found.
  def min_helper(l:List[Int], v){
                               ^Min:38: error: identifier expected but '}' found.
} 
^